--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,13 +29,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/dist/css/AdminLTE.min.css">
-    <link rel="stylesheet" href="/dist/css/skins/_all-skins.min.css">
-    <link rel="stylesheet" href="/plugins/iCheck/square/blue.css">
-    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/bower_components/ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="/plugins/datatables/dataTables.bootstrap.css">
+    <link rel="stylesheet" href="/min/production.min.css">
     <!--STYLES END-->
   </head>
 
@@ -94,16 +88,7 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/plugins/jQuery/jquery-2.2.3.min.js"></script>
-    <script src="/plugins/jQueryUI/jquery-ui.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/plugins/iCheck/icheck.min.js"></script>
-    <script src="/plugins/slimScroll/jquery.slimscroll.min.js"></script>
-    <script src="/dist/js/app.min.js"></script>
-    <script src="/plugins/datatables/jquery.dataTables.min.js"></script>
-    <script src="/plugins/datatables/dataTables.bootstrap.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="/min/production.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
