--- a/views/admin/userlist.ejs
+++ b/views/admin/userlist.ejs
@@ -5,8 +5,8 @@
   <div class="content-wrapper">
     <section class="content-header">
       <h1>
-        Dashboard
-        <small>Control panel</small>
+        User List
+        <small>Application</small>
       </h1>
     </section>
 
@@ -16,7 +16,7 @@
         <div class="col-xs-12">
           <div class="box">
             <div class="box-header">
-              <h3 class="box-title">User List</h3>
+              <h3 class="box-title"><%=((active && active == 'all') ? 'All' : ((active && active == 'active') ? 'Active' : ((active && active == 'suspended') ? 'Suspended' : '')))%>  Users</h3>
             </div>
             <div class="box-body">
               <table class="table table-bordered table-striped tablesort">
@@ -45,7 +45,14 @@
                         <td><%=((val.status) ? val.status : '')%></td>
                         <td><%=((moment && val.createdAt) ? moment(val.createdAt).format('DD-MMM-YYYY') : '')%></td>
                         <td><%=((val.expiryFlag && moment && val.expiryDate) ? moment(val.expiryDate).format('DD-MMM-YYYY') : 'expired')%></td>
-                        <td><button type="button" id="suspende" class="btn btn-xs btn-danger" data-toggle="tooltip" title="Suspende User" ><i class="fa fa-user-times"></i></button></td>
+                        <td>
+                          <button type="button" attr-user="<%=val.id%>" class="btn btn-xs btn-warning extentExpiration" data-toggle="tooltip" title="Extend Expiration" ><i class="fa fa-calendar-o"></i></button>
+                          <%if(val.status && val.status == 'active'){%>
+                            <button type="button" attr-user="<%=val.id%>" class="btn btn-xs btn-danger suspendeUser" data-toggle="tooltip" title="Suspende User" ><i class="fa fa-user-times"></i></button>
+                          <%} else if (val.status && val.status == 'suspended'){%>
+                            <button type="button" attr-user="<%=val.id%>" class="btn btn-xs btn-success sustainUser" data-toggle="tooltip" title="Sustain User" ><i class="fa fa-user-plus"></i></button>
+                          <%}%>
+                        </td>
                       </tr>
                     <%})%>
                   <%}%>
