--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,6 +36,8 @@
     <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/bower_components/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="/plugins/datatables/dataTables.bootstrap.css">
+    <link rel="stylesheet" href="/plugins/datepicker/datepicker3.css">
+    <link rel="stylesheet" href="/plugins/sweetalert2/dist/sweetalert2.min.css">
     <!--STYLES END-->
   </head>
 
@@ -103,6 +105,9 @@
     <script src="/dist/js/app.min.js"></script>
     <script src="/plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="/plugins/datatables/dataTables.bootstrap.min.js"></script>
+    <script src="/plugins/datepicker/bootstrap-datepicker.js"></script>
+    <script src="/plugins/sweetalert2/dist/sweetalert2.min.js"></script>
+    <script src="/js/moment.js"></script>
     <script src="/js/script.js"></script>
     <!--SCRIPTS END-->
   </body>
