--- a/views/admin/partials/aside.ejs
+++ b/views/admin/partials/aside.ejs
@@ -27,6 +27,7 @@
           <i class="fa fa-home"></i> <span>Dashboard</span>
         </a>
       </li>
+
       <li class="treeview <%=((typeof active != 'undefined' && (active == 'all' || active == 'active' || active == 'suspended'))? 'active' : '')%>">
         <a href="#">
           <i class="fa fa-users"></i> <span>Users</span>
@@ -40,7 +41,17 @@
           <li class="<%=((typeof active != 'undefined' && active == 'suspended')? 'active' : '')%>" ><a href="/userlist/suspended"><i class="fa fa-circle-o"></i> Suspended Users </a></li>
         </ul>
       </li>
-      <li class="treeview <%=((typeof active != 'undefined' && (active == 'listMCX' || active == 'createMCX'))? 'active' : '')%>">
+      <li class="<%=((typeof active != 'undefined' && active == 'listMCX')? 'active' : '')%>">
+        <a href="/ListMCXscripts">
+          <i class="fa fa-line-chart"></i> <span>MCX Tips</span>
+        </a>
+      </li>
+      <li class="<%=((typeof active != 'undefined' && active == 'news')? 'active' : '')%>">
+        <a href="/newsList">
+          <i class="fa fa-newspaper-o"></i> <span>News</span>
+        </a>
+      </li>
+      <!--<li class="treeview <%=((typeof active != 'undefined' && (active == 'listMCX' || active == 'createMCX'))? 'active' : '')%>">
         <a href="#">
           <i class="fa fa-line-chart"></i> <span>MCX Tips</span>
           <span class="pull-right-container">
@@ -51,7 +62,7 @@
           <li class="<%=((typeof active != 'undefined' && active == 'listMCX')? 'active' : '')%>"><a href="/mcxscripts/list"><i class="fa fa-circle-o"></i> All Scripts</a></li>
           <li class="<%=((typeof active != 'undefined' && active == 'createMCX')? 'active' : '')%>" ><a href="/mcxscripts/create"><i class="fa fa-circle-o"></i> Create Script </a></li>
         </ul>
-      </li>
+      </li>-->
     </ul>
   </section>
 </aside>
