--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="/dist/css/skins/_all-skins.min.css">
     <link rel="stylesheet" href="/plugins/iCheck/square/blue.css">
     <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/bower_components/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="/plugins/datatables/dataTables.bootstrap.css">
     <link rel="stylesheet" href="/plugins/datepicker/datepicker3.css">
     <link rel="stylesheet" href="/plugins/sweetalert2/dist/sweetalert2.min.css">
